bar-deployment.yaml
# bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar
        image: hashicorp/http-echo
        args:
        - "-text=bar test has been successful!"
        ports:
        - containerPort: 5678
```
