ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: foo.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foo
            port:
              number: 5678
  - host: bar.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bar
            port:
              number: 5678
